--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,22 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
-  awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+# Example
+#- degree: Bachelor of Arts, Human Rights
+#  uni: Yale University
+#  year: 2004 &mdash; 2008
+#  awards:
+#    - award: Summa Cumme Laude graduate
+#  summary: If you had any meaningful roles at college, feel free to write about them here
 
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+- degree: MSc, Information and Communication Systems
+  uni: Hamburg University of Technology (TUHH), Germany
+  year: 2018 - 2022
+  awards:
+    - award: "Master Thesis: Communication concept for multi-sensor platform"
+    - award: "Research Project: Development of an embedded communication hub for sensor data acquisition in a robotic system"
+  summary: "Focus: Secure and dependable communication systems and networks."
+
+- degree: BSc, Mechatronics
+  uni: National Polytechnic Institute (IPN), Mexico
+  year: 2010 - 2015
+  #award: Most likely to succeed
+  summary: Topics mainly focused on Electronics, Industrial Applications, Automation and Robotics.
