--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,12 +1,19 @@
 # Projects
 # uncomment the urls if you wish to display them, and add your own URL
+# example
+#- project: jazznotes.io
+#  role: Founder & Primary Developer
+#  duration: 2012 &mdash; Present
+#  # url: "#"
+#  description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
+# <ul class="resume-item-list"><li></li><li></li><li></li>
 
-# jazznotes.io
-- project: jazznotes.io
-  role: Founder & Primary Developer
-  duration: 2012 &mdash; Present
+# master thesis
+- project: "Master Thesis: Communication concept for multi-sensor platform"
+  role: Master student, Institute for Mechatronics (iMEK)
+  duration: WiSe 2021
   # url: "#"
-  description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
+  description: <ul class="resume-item-list"><li>Integration of IRIDIUM and LoRaWAN modules into a communication prototype.</li><li>Design and documentation of a communication strategy focused on power-saving.</li><li>Developing of FW written in C for the communication board.</li><li>PCB design with EAGLE and HW-tests of the prototype.</li>
 
 # Springfield Community Outreach Group
 - project: Springfield Community Outreach Group
