test with bullet points in skill

--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,7 +1,8 @@
 # Skills
 # Organizational leadership
-- skill: Organizational leadership
-  description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
+# <ul class="resume-item-list"><li></li>
+- skill: Languages
+  description: <ul class="resume-item-list"><li>"German; upper intermediate, Goether Zertifikat B2.1"</li>
 
 # Communications strategy
 - skill: Communications strategy
