--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,5 @@
 # links
-- url: "#"
-  description: Springfield Jazz Enthusiasts
-- url: "#"
-  description: Springfield Young Professionals
+- url: "https://www.xing.com/profile/Carlos_Reyes071607/portfolio"
+  description: XING Profile
+- url: "https://www.eura-ag.com/en/blog/simply-explained-technology-readiness-level-in-eu-funding"
+  description: What is TRL (Technology Readiness Level)?
