--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,4 +1,8 @@
 # links
+- url: "github.com"
+  description: Click to download the CV in english
+- url: "github.com"
+  description: Klick zum Herunterladen des Lebenlaufs auf Deutsch
 - url: "https://www.xing.com/profile/Carlos_Reyes071607/portfolio"
   description: XING Profile
 - url: "https://www.eura-ag.com/en/blog/simply-explained-technology-readiness-level-in-eu-funding"
