--- a/_data/links.yml
+++ b/_data/links.yml
@@ -4,7 +4,7 @@
 - url: "https://github.com/jreyesa0901/template-cv-02/blob/gh-pages/_data/cv-english.pdf?raw=true"
   description: Click to download the CV in english
 - url: "https://github.com/jreyesa0901/template-cv-02/blob/gh-pages/_data/cv-deutsch.pdf?raw=true"
-  description: Klick zum Herunterladen des Lebenlaufs auf Deutsch
+  description: Lebenslauf auf Deutsch heruntaladen
 - url: "https://www.xing.com/profile/Carlos_Reyes071607/portfolio"
   description: XING Profile
 - url: "https://www.eura-ag.com/en/blog/simply-explained-technology-readiness-level-in-eu-funding"
