--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -8,7 +8,7 @@
 
 # Freelance
 - company: Independent IT-Consulting, remote
-  #position: Independent
+  position: Non-resident
   duration: "Spare-time: Since Jun 2024"
   summary: <ul class="resume-item-list"><li>Code review and software management with Git tools for independent starting tech projects.</li><li> Home-security cameras and modems configuration, integration of electronic prototypes for smart-home applications and basic web pages creation for independent and cultural initiatives.</li>
 # Eppi
